--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/ButtonBackground"/>
+    <solid android:color="@color/buttonBackground"/>
     <corners android:radius="7dp"/>
     <stroke android:width="2dp"
-            android:color="@color/ButtonBorder"/>
-
+            android:color="@color/buttonBorder"/>
 </shape>
