--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:layout_marginBottom="15dp"
             android:textStyle="bold"
             android:textSize="24sp"
+            android:textColor="@color/displayTextColor"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -46,6 +47,7 @@
             android:layout_marginBottom="15dp"
             android:textStyle="bold"
             android:textSize="24sp"
+            android:textColor="@color/displayTextColor"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dispalyTemperature"
@@ -58,6 +60,7 @@
             android:layout_marginBottom="15dp"
             android:textStyle="bold"
             android:textSize="24sp"
+            android:textColor="@color/displayTextColor"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dispalyChanceOfRain"
@@ -70,6 +73,7 @@
             android:layout_marginBottom="15dp"
             android:textStyle="bold"
             android:textSize="24sp"
+            android:textColor="@color/displayTextColor"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dispalyUV"
@@ -81,7 +85,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/change_location"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="9dp"
+        android:background="@drawable/button_background"
+        android:textStyle="bold"
+        android:textColor="@color/lightTextColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
